input bug on iphone

--- a/src/components/MenuPopup/MenuPopup.css
+++ b/src/components/MenuPopup/MenuPopup.css
@@ -11,7 +11,7 @@
   right: 0;
   background: rgba(0, 0, 0, .3);
   z-index: 11;
-  transition: right ease 0.5s;
+  transition: visibility .3s, opacity .3s liner;
 }
 
 @media screen and (max-width: 1023px){
