--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -1,8 +1,15 @@
 .movies-card {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
   width: 100%;
   position: relative;
+  -webkit-box-shadow: 0px 4px 30px rgb(0 0 0 / 8%);
+  box-shadow: 0px 4px 30px rgb(0 0 0 / 8%);
 }
 
 .movies-card__image {
